# internal/handler/landing/banners.go
@@ -7,23 +7,22 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-// @Summary Landing
-// @Description Landing
+// @Summary Get Landing Banners
+// @Description Get Landing Banners
 // @Tags Landing
 // @Accept json
 // @Produce json
-// @Param code path string true "Merchant Code"
-// @Success 200 {object} LandingResponse
-// @Router /api/v1/landing/{code} [get]
-func (h *impl) Landing(c *fiber.Ctx) error {
+// @Param code path string true "Code"
+// @Success 200 {object} landing.GetLandingBannersResponse
+// @Router /api/v1/landing/{code}/banners [get]
+func (h *impl) GetLandingBanners(c *fiber.Ctx) error {
 	code := c.Params("code")
 	req := &landing.LandingRequest{Code: code}
-
 	if code == "" {
 		return response.Error(c, req, constant.ErrCodeInvalidParam, "Code is required")
 	}
 
-	data, err := h.manager.Landing(c.UserContext(), code)
+	data, err := h.manager.GetLandingBanners(c.UserContext(), code)
 	if err != nil {
 		return response.Error(c, req, constant.GetErrorCode(err), err.Error())
 	}
